--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./img/portalMenor.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
+
 </head>
 
 
@@ -27,56 +32,62 @@
     <div class="grid-container">
         <div class="a1">
             <h1>PUT THE PORTALS</h1>
-            <div class="grid-personagens">
+            <div class="grid-a1">
                 <div class="desc">
-                    <h2>Big boss</h2>
+                    <h2>THE GAME</h2>
                     <p>PUT THE PORTALS é um jogo indie, desenvolvido no Brasil por 
                         Lucas Siqueira e participação de
                         Paulo Cruz. Esse
                         projeto foi financiado por uma iniciativa da Apple para fomentar o cenário de desenvolvimento de
                         jogos e apps no
                         Brasil, chamada Apple academy.</p>
-                    </div>
+                </div>
+
 
                 <div class="personagem">
                     <div class="bichos-grid">
-                        <div class="p1 quadrado" onclick="mudaFoto('/img/per/Personagem.png')" >
+                        <div class="p1 quadrado" onclick="mudaNome('BIBBO'), mudaFoto('/img/per/Personagem.png')" >
                             <img src="/img/per/Personagem.png"  class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p2 quadrado"  onclick="mudaFoto('/img/per/Inimigo2.png')">
+                        <div class="p2 quadrado"  onclick="mudaNome('Ve nada'), mudaFoto('/img/per/Inimigo2.png')">
                             <img src="/img/per/Inimigo2.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p3 quadrado" onclick="mudaFoto('/img/per/Inimigo.png')">
+                        <div class="p3 quadrado" onclick="mudaNome('Ve tudo'), mudaFoto('/img/per/Inimigo.png')">
                             <img src="/img/per/Inimigo.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p4 quadrado" onclick="mudaFoto('/img/per/chfFinal.gif')">
+                        <div class="p4 quadrado" onclick="mudaNome('Big chefe'), mudaFoto('/img/per/chfFinal.gif')">
                             <img src="/img/per/Chefão.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p5 quadrado" onclick="mudaFoto('/img/per/poção.png')">
+                        <div class="p5 quadrado" onclick="mudaNome('Quick de morango'), mudaFoto('/img/per/poção.png')">
                             <img src="/img/per/poção.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p6 quadrado" onclick="mudaFoto('/img/per/óculos.png')">
+                        <div class="p6 quadrado" onclick="mudaNome('Oculos brabão'), mudaFoto('/img/per/óculos.png')">
                             <img src="/img/per/óculos.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p7 quadrado" onclick="mudaFoto('/img/per/relógio.png')">
+                        <div class="p7 quadrado" onclick="mudaNome('Relogio du dale'), mudaFoto('/img/per/relógio.png')">
                             <img src="/img/per/relógio.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p8 quadrado" onclick="mudaFoto('/img/per/chapéu.png')">
+                        <div class="p8 quadrado" onclick="mudaNome('Chapeu bolado'), mudaFoto('/img/per/chapéu.png')">
                             <img src="/img/per/chapéu.png" class="img-fluid img2" alt="Responsive image">
                         </div>
                       </div>
+
                 </div>
 
             </div>
         </div>
     
+
         <div class="a2">
-            <img src="/img/blob (1).svg" class=" svg1" alt="Responsive image">
-            <img src="/img/blob2.svg" class=" svg1" alt="Responsive image">
+            <img src="/img/blob (1).svg" class="slide-top svg1" alt="Responsive image">
+            <img src="/img/blob2.svg" class="slide-top2 svg1" alt="Responsive image">
     
+            <h2 class="nome-personagem" id="name">BIG CHEFE</h2>
+
             <img src="/img/per/chfFinal.gif" id="icone" class="img1" alt="Responsive image">
 
         </div>
+
 
         <div class="sobre-flutuante">
             <h1>SOBRE</h1>
