versão Movel home sem bug

--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
 
 <body>
 
-    <img src="/img/download.png" alt="teste">
-
-
-
 
     <div class="grid-container">
         <div class="a1">
@@ -42,29 +38,29 @@
 
                 <div class="personagem">
                     <div class="bichos-grid">
-                        <div class="p1 quadrado" onclick="mudaNome('BIBBO'), mudaFoto('/img/per/Personagem.png')" >
-                            <img src="/img/per/Personagem.png"  class="img-fluid img2" alt="Responsive image">
+                        <div class="p1 quadrado" onclick="mudaNome('BIBBO'), mudaFoto('./img/per/Personagem.png')" >
+                            <img src="./img/per/Personagem.png"  class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p2 quadrado"  onclick="mudaNome('Ve nada'), mudaFoto('/img/per/Inimigo2.png')">
-                            <img src="/img/per/Inimigo2.png" class="img-fluid img2" alt="Responsive image">
+                        <div class="p2 quadrado"  onclick="mudaNome('Ve nada'), mudaFoto('./img/per/Inimigo2.png')">
+                            <img src="./img/per/Inimigo2.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p3 quadrado" onclick="mudaNome('Ve tudo'), mudaFoto('/img/per/Inimigo.png')">
-                            <img src="/img/per/Inimigo.png" class="img-fluid img2" alt="Responsive image">
+                        <div class="p3 quadrado" onclick="mudaNome('Ve tudo'), mudaFoto('./img/per/Inimigo.png')">
+                            <img src="./img/per/Inimigo.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p4 quadrado" onclick="mudaNome('Big chefe'), mudaFoto('/img/per/chfFinal.gif')">
-                            <img src="/img/per/Chefão.png" class="img-fluid img2" alt="Responsive image">
+                        <div class="p4 quadrado" onclick="mudaNome('Big chefe'), mudaFoto('./img/per/chfFinal.gif')">
+                            <img src="./img/per/Chefão.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p5 quadrado" onclick="mudaNome('Quick de morango'), mudaFoto('/img/per/poção.png')">
-                            <img src="/img/per/poção.png" class="img-fluid img2" alt="Responsive image">
+                        <div class="p5 quadrado" onclick="mudaNome('Quick de morango'), mudaFoto('./img/per/poção.png')">
+                            <img src="./img/per/poção.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p6 quadrado" onclick="mudaNome('Oculos brabão'), mudaFoto('/img/per/óculos.png')">
-                            <img src="/img/per/óculos.png" class="img-fluid img2" alt="Responsive image">
+                        <div class="p6 quadrado" onclick="mudaNome('Oculos brabão'), mudaFoto('./img/per/óculos.png')">
+                            <img src="./img/per/óculos.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p7 quadrado" onclick="mudaNome('Relogio du dale'), mudaFoto('/img/per/relógio.png')">
-                            <img src="/img/per/relógio.png" class="img-fluid img2" alt="Responsive image">
+                        <div class="p7 quadrado" onclick="mudaNome('Relogio du dale'), mudaFoto('./img/per/relógio.png')">
+                            <img src="./img/per/relógio.png" class="img-fluid img2" alt="Responsive image">
                         </div>
-                        <div class="p8 quadrado" onclick="mudaNome('Chapeu bolado'), mudaFoto('/img/per/chapéu.png')">
-                            <img src="/img/per/chapéu.png" class="img-fluid img2" alt="Responsive image">
+                        <div class="p8 quadrado" onclick="mudaNome('Chapeu bolado'), mudaFoto('./img/per/chapéu.png')">
+                            <img src="./img/per/chapéu.png" class="img-fluid img2" alt="Responsive image">
                         </div>
                       </div>
 
@@ -75,12 +71,12 @@
     
 
         <div class="a2">
-            <img src="/img/blob (1).svg" class="slide-top svg1" alt="Responsive image">
-            <img src="/img/blob2.svg" class="slide-top2 svg1" alt="Responsive image">
+            <img src="./img/blob (1).svg" class="slide-top svg1" alt="Responsive image">
+            <img src="./img/blob2.svg" class="slide-top2 svg1" alt="Responsive image">
     
             <h2 class="nome-personagem" id="name">BIG CHEFE</h2>
 
-            <img src="/img/per/chfFinal.gif" id="icone" class="img1" alt="Responsive image">
+            <img src="./img/per/chfFinal.gif" id="icone" class="img1" alt="Responsive image">
 
         </div>
 
