--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 
         <div class="a2">
             <img src="./img/blob (1).svg" class="slide-top svg1" alt="Responsive image">
-            <img src="./img/blob2.svg" class="slide-top2 svg1" alt="Responsive image">
+            <object data="./img/blob2.svg" class="slide-top2 svg1" type="image/svg+xml"></object>
+            
     
             <h2 class="nome-personagem" id="name">BIG CHEFE</h2>
 
