--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </div>
     
                     <div class="b2">
-                        <img src="/img/cubo-de-rubik.svg" class="img-fluid img" alt="...">
+                        <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008" src="./screenshotting-008.mp4" style=""></video>
                     </div>
                 </div>
                 <div class="grid-teste">
@@ -129,14 +129,17 @@
                             inimigos. Ele usa seus portais para se locomover.</p>
                     </div>
                     <div class="b4">
-                        <img src="/img/controle-de-video-game.svg" class="img-fluid img" alt="...">
+                        <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008" src="./screenshotting-008.mp4" style=""></video>
+
                     </div>
                 </div>
 
                 <div class="grid-video">
                     <h2 class="teaser">Teaser</h2>
 
-                    <iframe class="video" width="360" height="215" src="https://www.youtube.com/embed/u84hRUQlaio?autoplay=1&loop=1&autopause=0"  frameborder="5" modestbranding="1"  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008" src="./screenshotting-008.mp4" style=""></video>
+
+                    
 
                 </div>
             </div>
