--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     
             <h2 class="nome-personagem" id="name">BIG CHEFE</h2>
 
-            <img src="./img/gifs/chefaoG.gif" id="icone" class="img1" alt="Responsive image">
+
+            <object data="./img/gifs/chefaoG.gif" width="50px" height="50px" id="icone" class="img1" type="image/svg+xml"></object>
         </div>
 
 
