--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
     
 
         <div class="a2">
-
             <div class="i-grid">
-                x
-                <h2>a</h2>
+                <img src="./img/gifs/chefaoG.gif" id="icone" class="img1" alt="Responsive image">
+                <h2 class="nome-personagem" id="name">BIG CHEFE</h2>
             </div>
 
         </div>
