--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <img src="./img/gifs/chefaoG.gif" id="icone" class="img1" alt="Responsive image">
                 <h2 class="nome-personagem" id="name">BIG CHEFE</h2>
             </div>
+
             <object data="./img/blob (1).svg" class="slide-top svg1" type="image/svg+xml"></object>
             <object data="./img/blob2.svg" class="slide-top2 svg1" type="image/svg+xml"></object>
         </div>
@@ -107,7 +108,7 @@
             <div class="grid-sobre">
                 <div class="grid-teste">
                     <div class="b1 tx">
-                        <h2>Des</h2>
+                        <h2>DESCT</h2>
                         <p>PUT THE PORTALS é um jogo indie, desenvolvido no Brasil por Lucas Siqueira e participação de
                             Paulo Cruz. Esse
                             projeto foi financiado por uma iniciativa da Apple para fomentar o cenário de desenvolvimento de
@@ -121,7 +122,7 @@
                 </div>
                 <div class="grid-teste">
                     <div class="b3 tx">
-                        <h2>O Game</h2>
+                        <h2>O GAME</h2>
                         <p class="text-justify">PUT THE PORTALS é um jogo da categoria puzzle, onde o jogador controlará o Bibbo, personagem
                             principal do game que usar seus poderes para resolzer os mais variados desafios e enfrentar uma
                             gama
