--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
                         <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008" src="./screenshotting-008.mp4" style=""></video>
                     </div>
                 </div>
-                <div class="grid-teste">
+                <div class="grid-teste2">
                     <div class="b3 tx">
                         <h2>O GAME</h2>
-                        <p class="text-justify">PUT THE PORTALS é um jogo da categoria puzzle, onde o jogador controlará o Bibbo, personagem
+                        <p>PUT THE PORTALS é um jogo da categoria puzzle, onde o jogador controlará o Bibbo, personagem
                             principal do game que usar seus poderes para resolzer os mais variados desafios e enfrentar uma
                             gama
                             inimigos. Ele usa seus portais para se locomover.</p>
@@ -134,8 +134,8 @@
                     </div>
                 </div>
 
-                <div class="grid-video">
-                    <h2 class="teaser">Teaser</h2>
+                <div class="grid-video tx">
+                    <h2>TEASER</h2>
 
                     <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008" src="./screenshotting-008.mp4" style=""></video>
 
