--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Put the Portals</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -122,7 +123,7 @@
                 </div>
                 <div class="grid-teste2">
                     <div class="b3 tx">
-                        <h2>O GAME</h2>
+                        <h2 class="main-h2">O GAME</h2>
                         <p>PUT THE PORTALS é um jogo da categoria puzzle, onde o jogador controlará o Bibbo, personagem
                             principal do game que usar seus poderes para resolzer os mais variados desafios e enfrentar uma
                             gama
@@ -130,15 +131,18 @@
                     </div>
                     <div class="b4">
                         <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008" src="./screenshotting-008.mp4" style=""></video>
-
                     </div>
                 </div>
 
                 <div class="grid-video tx">
-                    <h2>TEASER</h2>
+                    <div class="grid-teaser">
+                        <h2 class="teaser">TEASER</h2>
+                    </div>
 
-                    <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008" src="./screenshotting-008.mp4" style=""></video>
 
+                    <div class="videp-teaser">
+                        <video class="videp-teaserT" playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008" src="./screenshotting-008.mp4" style=""></video>
+                    </div>
                     
 
                 </div>
