--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Put the Portals</title>
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css//footer.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
+	<script src="https://kit.fontawesome.com/c188d90cec.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" sizes="32x32" href="./img/portalC.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
@@ -151,6 +152,97 @@
     
         </div>
     </div>
+
+
+
+    <footer>
+        <div class="info">
+
+
+            <div class="web">
+                <h2 class="footer-h2">Put The Portals</h2>
+                <div class="grid-web ">
+                    <a href="mailto:pauloeduardo.crp@gmail.com">
+                        <i class="far fa-envelope icons"></i>
+                        <div class="footer-nomes">
+                            pauloeduardo.crp@gmail.com
+                        </div>
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/paulo-eduardo-s-da-cruz-3773bb154" >
+                        <i class="fab fa-linkedin-in icons"></i>
+                        <div class="footer-nomes">
+                            Paulo Eduardo S. da Cruz
+                        </div>
+
+                    </a>
+
+                    <a href="https://api.whatsapp.com/send?phone=5561993446589">
+                        <i class="fab fa-github icons"></i> 
+                        <div class="footer-nomes">
+                            Paulo Cruz
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+
+
+            <div class="game">
+                <h2 class="footer-h2">Web Developer </h2>
+                <div class="grid-web ">
+                    <a href="mailto:pauloeduardo.crp@gmail.com">
+                        <i class="far fa-envelope icons"></i>
+                        <div class="footer-nomes">
+                            pauloeduardo.crp@gmail.com
+                        </div>
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/paulo-eduardo-s-da-cruz-3773bb154" >
+                        <i class="fab fa-linkedin-in icons"></i>
+                        <div class="footer-nomes">
+                            Paulo Eduardo S. da Cruz
+                        </div>
+
+                    </a>
+
+                    <a href="https://api.whatsapp.com/send?phone=5561993446589">
+                        <i class="fab fa-github icons"></i> 
+                        <div class="footer-nomes">
+                            Paulo Cruz
+                        </div>
+                    </a>
+                </div>
+            </div>
+
+            <div class="dev">
+                <h2 class="footer-h2">Game Developer</h2>
+                <div class="grid-web ">
+                    <a href="mailto:pauloeduardo.crp@gmail.com">
+                        <i class="far fa-envelope icons"></i>
+                        <div class="footer-nomes">
+                            pauloeduardo.crp@gmail.com
+                        </div>
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/paulo-eduardo-s-da-cruz-3773bb154" >
+                        <i class="fab fa-linkedin-in icons"></i>
+                        <div class="footer-nomes">
+                            Paulo Eduardo S. da Cruz
+                        </div>
+
+                    </a>
+
+                    <a href="https://api.whatsapp.com/send?phone=5561993446589">
+                        <i class="fab fa-github icons"></i> 
+                        <div class="footer-nomes">
+                            Paulo Cruz
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
    
 
 </body>
