--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css//footer.css">
+    <link rel="stylesheet" href="./css//navmenu.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
@@ -31,13 +32,8 @@
             <h1>PUT THE PORTALS</h1>
             <div class="grid-a1">
                 <div class="desc">
-                    <h2>THE GAME</h2>
-                    <p>PUT THE PORTALS é um jogo indie, desenvolvido no Brasil por
-                        Lucas Siqueira e participação de
-                        Paulo Cruz. Esse
-                        projeto foi financiado por uma iniciativa da Apple para fomentar o cenário de desenvolvimento de
-                        jogos e apps no
-                        Brasil, chamada Apple academy.</p>
+                    <h2>Introdução</h2>
+                    <p>Put The Portals é um game indie, que se passa em uma floresta mágica, onde o jogador deverá resolver quebra-cabeças para derrotar seus inimigos. Foi desenvolvido dentro da Apple Academy, uma iniciativa Apple para fomentar o cenário de desenvolvimento de jogos e apps no Brasil, em parceria com a Universidade Católica de  Brasília.</p>
                 </div>
 
 
@@ -93,8 +89,8 @@
                 <h2 class="nome-personagem" id="name">BIG CHEFE</h2>
             </div>
 
-            <object data="./img/blob (1).svg" class="slide-top svg1" type="image/svg+xml"></object>
-            <object data="./img/blob2.svg" class="slide-top2 svg1" type="image/svg+xml"></object>
+            <object data="./img//fundo1.svg" class="slide-top svg1" type="image/svg+xml"></object>
+            <object data="./img//fundo2.svg" class="slide-top2 svg1" type="image/svg+xml"></object>
         </div>
 
 
@@ -112,18 +108,29 @@
 
 
     <div class="main">
+        
+    <object data="./img/blob (1).svg" class="slide-top svgGiga" type="image/svg+xml"></object>
+    <object data="./img/blob2.svg" class="slide-top2 svgGiga" type="image/svg+xml"></object>
+
+    <object data="./img/blob (1).svg" class="slide-top svgGiga2" type="image/svg+xml"></object>
+    <object data="./img/blob2.svg" class="slide-top2 svgGiga2" type="image/svg+xml"></object>
+
+    <object data="./img/blob (1).svg" class="slide-top svgGiga3" type="image/svg+xml"></object>
+    <object data="./img/blob2.svg" class="slide-top2 svgGiga3" type="image/svg+xml"></object>
+
+    <object data="./img/blob (1).svg" class="slide-top svgGiga4" type="image/svg+xml"></object>
+    <object data="./img/blob2.svg" class="slide-top2 svgGiga4" type="image/svg+xml"></object>
+
+    <object data="./img/blob (1).svg" class="slide-top svgGiga5" type="image/svg+xml"></object>
+    <object data="./img/blob2.svg" class="slide-top2 svgGiga5" type="image/svg+xml"></object>
+
         <div class="principal ">
 
             <div class="grid-sobre">
                 <div class="grid-teste">
                     <div class="b1 tx">
-                        <h2>DESCT</h2>
-                        <p>PUT THE PORTALS é um jogo indie, desenvolvido no Brasil por Lucas Siqueira e participação de
-                            Paulo Cruz. Esse
-                            projeto foi financiado por uma iniciativa da Apple para fomentar o cenário de
-                            desenvolvimento de
-                            jogos e apps no
-                            Brasil, chamada Apple academy.</p>
+                        <h2>Descrição</h2>
+                        <p>O Jogador usará portais para se locomover, com isso terá que atingir todos os inimigos do mapa, para então conseguir sua vitória, ele também contará com uma série de itens especiais que o ajudarão nessa jornada, como o chapéu da sabedoria e o cronometro dourado.  </p>
                     </div>
 
                     <div class="b2">
@@ -133,12 +140,8 @@
                 </div>
                 <div class="grid-teste2">
                     <div class="b3 tx">
-                        <h2 class="main-h2">O GAME</h2>
-                        <p>PUT THE PORTALS é um jogo da categoria puzzle, onde o jogador controlará o Bibbo, personagem
-                            principal do game que usar seus poderes para resolzer os mais variados desafios e enfrentar
-                            uma
-                            gama
-                            inimigos. Ele usa seus portais para se locomover.</p>
+                        <h2 class="main-h2">Itens especiais</h2>
+                        <p>O jogador certamente enfrentará desafios complexos, nesses momentos ele poderá usar itens especiais, que podem mostrar o caminho inicial do desafio, traçar suas rotas em meio aos portais e até mesmo parar o tempo para que o jogador consiga resolver o desafio sem se preocupar com o relógio.</p>
                     </div>
                     <div class="b4">
                         <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008"
@@ -254,6 +257,19 @@
             
         </div>
     </footer>
+
+
+    <div class="menu-flutuante">
+        <div class="grid-flutuante">
+
+            <div class="spinner-grow text-war" role="status">
+                <span class="sr-only">Loading...</span>
+              </div>
+
+              <object data="./img//blk.svg" class="svgApple" type="image/svg+xml"></object>
+        </div>
+
+    </div>
 
 
 </body>
