--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <div class="menu-flutuante">
         <div class="grid-flutuante">
 
-            <div class="spinner-grow text-war" role="status">
+            <div class="spinner" role="status">
                 <span class="sr-only">Loading...</span>
               </div>
 
