--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 
-<script src="funcoes.js"></script>
+<script src="./javaScript/funcoes.js"></script>
 
 <body>
 
@@ -40,40 +40,40 @@
                 <div class="personagem">
                     <div class="bichos-grid">
 
-                        <div class="p1 quadrado" onclick="mudaNome('BIBBO'), mudaFoto('./img/perC/personagemC.png')">
-                            <img src="./img/perC/personagemC.png" class="img-fluid img2" alt="Responsive image">
+                        <div class="p1 quadrado" onclick="mudaNome('Boo'), mudaFoto('./img/perC/personagemC.png')">
+                            <img src="./img/perC/personagemC.png" class="img-fluid img2" alt="Responsive image Boo">
                         </div>
 
-                        <div class="p2 quadrado" onclick="mudaNome('Ve nada'), mudaFoto('./img/perC/inimigo2C.png')">
-                            <img src="./img/perC/inimigo2C.png" class="img-fluid img2" alt="Responsive image">
+                        <div class="p2 quadrado" onclick="mudaNome('Ogu'), mudaFoto('./img/perC/inimigo2C.png')">
+                            <img src="./img/perC/inimigo2C.png" class="img-fluid img2" alt="Responsive image Ogu">
                         </div>
 
-                        <div class="p3 quadrado" onclick="mudaNome('Ve tudo'), mudaFoto('./img/perC/inimigoC.png')">
-                            <img src="./img/perC/inimigoC.png" class="img-fluid img2" alt="Responsive image">
+                        <div class="p3 quadrado" onclick="mudaNome('Ogu'), mudaFoto('./img/perC/inimigoC.png')">
+                            <img src="./img/perC/inimigoC.png" class="img-fluid img2" alt="Responsive image Ogu">
                         </div>
 
-                        <div class="p4 quadrado" onclick="mudaNome('Big chefe'), mudaFoto('./img/gifs/chefaoG.gif')">
+                        <div class="p4 quadrado" onclick="mudaNome('GRANDE OGU'), mudaFoto('./img/gifs/chefaoG.gif')">
                             <img src="./img/perC/chefaoC.png" class="img-fluid img2" alt="Responsive image">
                         </div>
 
                         <div class="p5 quadrado"
-                            onclick="mudaNome('Quick de morango'), mudaFoto('./img/perC/pocaoC.png')">
-                            <img src="./img/perC/pocaoC.png" class="img-fluid img2" alt="Responsive image">
+                            onclick="mudaNome('Poção das Cores'), mudaFoto('./img/perC/pocaoC.png')">
+                            <img src="./img/perC/pocaoC.png" class="img-fluid img2" alt="Responsive image Poção das Cores">
                         </div>
 
                         <div class="p6 quadrado"
-                            onclick="mudaNome('Oculos brabão'), mudaFoto('./img/perC/oculosC.png')">
-                            <img src="./img/perC/oculosC.png" class="img-fluid img2" alt="Responsive image">
+                            onclick="mudaNome('Óculos do Futuro'), mudaFoto('./img/perC/oculosC.png')">
+                            <img src="./img/perC/oculosC.png" class="img-fluid img2" alt="Responsive image Óculos do Futuro">
                         </div>
 
                         <div class="p7 quadrado"
-                            onclick="mudaNome('Relogio du dale'), mudaFoto('./img/perC/relogioC.png')">
-                            <img src="./img/perC/relogioC.png" class="img-fluid img2" alt="Responsive image">
+                            onclick="mudaNome('Cronometro Dourado'), mudaFoto('./img/perC/relogioC.png')">
+                            <img src="./img/perC/relogioC.png" class="img-fluid img2" alt="Responsive image Cronometro Dourado">
                         </div>
 
                         <div class="p8 quadrado"
-                            onclick="mudaNome('Chapeu bolado'), mudaFoto('./img/perC/chapeuC.png')">
-                            <img src="./img/perC/chapeuC.png" class="img-fluid img2" alt="Responsive image">
+                            onclick="mudaNome('Chapeu do Conhecimento'), mudaFoto('./img/perC/chapeuC.png')">
+                            <img src="./img/perC/chapeuC.png" class="img-fluid img2" alt="Responsive image Chapeu da Sabedoria">
                         </div>
 
                     </div>
@@ -86,7 +86,7 @@
         <div class="a2">
             <div class="i-grid">
                 <img src="./img/gifs/chefaoG.gif" id="icone" class="img1" alt="Responsive image">
-                <h2 class="nome-personagem" id="name">BIG CHEFE</h2>
+                <h2 class="nome-personagem" id="name">GRANDE OGU</h2>
             </div>
 
             <object data="./img//fundo1.svg" class="slide-top svg1" type="image/svg+xml"></object>
@@ -137,7 +137,7 @@
 
                     <div class="b2">
                         <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008"
-                            src="./screenshotting-008.mp4" style=""></video>
+                            src="./videos/screenshotting-008.mp4" style=""></video>
                     </div>
                 </div>
                 <div class="grid-teste2">
@@ -147,7 +147,7 @@
                     </div>
                     <div class="b4">
                         <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008"
-                            src="./screenshotting-008.mp4" style=""></video>
+                            src="./videos/screenshotting-008.mp4" style=""></video>
                     </div>
                 </div>
 
@@ -159,7 +159,7 @@
 
                     <div class="videp-teaser">
                         <video class="videp-teaserT" playsinline="0" autoplay="autoplay" muted="" loop="1"
-                            id="screenshotting-008" src="./screenshotting-008.mp4" style=""></video>
+                            id="screenshotting-008" src="./videos/screenshotting-008.mp4" style=""></video>
                     </div>
 
 
@@ -181,21 +181,21 @@
                     <a href="mailto:pauloeduardo.crp@gmail.com">
                         <i class="far fa-envelope icons"></i>
                         <div class="footer-nomes">
-                            pauloeduardo.crp@gmail.com
+                            puttheportals@gmail.com
                         </div>
                     </a>
 
-                    <a href="https://www.linkedin.com/in/paulo-eduardo-s-da-cruz-3773bb154">
-                        <i class="fab fa-linkedin-in icons"></i>
+                    <a href="#">
+                        <i class="fab fa-app-store icons"></i>
                         <div class="footer-nomes">
-                            Paulo Eduardo S. da Cruz
+                            AppStore/puttheportals
                         </div>
                     </a>
 
-                    <a href="https://api.whatsapp.com/send?phone=5561993446589">
-                        <i class="fab fa-github icons"></i>
+                    <a href="#">
+                        <i class="fas fa-globe-americas icons"></i>
                         <div class="footer-nomes">
-                            Paulo Cruz
+                            putheportal.com
                         </div>
                     </a>
                 </div>
@@ -233,24 +233,24 @@
             <div class="dev">
                 <h2 class="footer-h2">Game Developer</h2>
                 <div class="grid-web ">
-                    <a href="mailto:pauloeduardo.crp@gmail.com">
+                    <a href="mailto:lukc@rocketmail.com ">
                         <i class="far fa-envelope icons"></i>
                         <div class="footer-nomes">
-                            pauloeduardo.crp@gmail.com
+                            lukc@rocketmail.com 
                         </div>
                     </a>
 
-                    <a href="https://www.linkedin.com/in/paulo-eduardo-s-da-cruz-3773bb154">
-                        <i class="fab fa-linkedin-in icons"></i>
+                    <a href="https://www.instagram.com/ls_siqueira/">
+                        <i class="fab fa-instagram icons"></i>
                         <div class="footer-nomes">
-                            Paulo Eduardo S. da Cruz
+                            @ls_siqueira
                         </div>
                     </a>
 
-                    <a href="https://api.whatsapp.com/send?phone=5561993446589">
-                        <i class="fab fa-github icons"></i>
+                    <a href="#">
+
                         <div class="footer-nomes">
-                            Paulo Cruz
+                             Lucas Siqueira
                         </div>
                     </a>
 
