--- a/index.html
+++ b/index.html
@@ -40,39 +40,39 @@
                 <div class="personagem">
                     <div class="bichos-grid">
 
-                        <div class="p1 quadrado" onclick="mudaNome('Boo'), mudaFoto('./img/perC/personagemC.png')">
+                        <div class="p1 quadrado" onclick="mudaNome('Boo'), mudaFoto('./img/gifs/booG.gif')">
                             <img src="./img/perC/personagemC.png" class="img-fluid img2" alt="Responsive image Boo">
                         </div>
 
-                        <div class="p2 quadrado" onclick="mudaNome('Ogu'), mudaFoto('./img/perC/inimigo2C.png')">
+                        <div class="p2 quadrado" onclick="mudaNome('Ogu'), mudaFoto('./img/gifs/ogu1G.gif')">
                             <img src="./img/perC/inimigo2C.png" class="img-fluid img2" alt="Responsive image Ogu">
                         </div>
 
-                        <div class="p3 quadrado" onclick="mudaNome('Ogu'), mudaFoto('./img/perC/inimigoC.png')">
+                        <div class="p3 quadrado" onclick="mudaNome('Ogu'), mudaFoto('./img/gifs/ogu2G.gif')">
                             <img src="./img/perC/inimigoC.png" class="img-fluid img2" alt="Responsive image Ogu">
                         </div>
 
-                        <div class="p4 quadrado" onclick="mudaNome('GRANDE OGU'), mudaFoto('./img/gifs/chefaoG.gif')">
-                            <img src="./img/perC/chefaoC.png" class="img-fluid img2" alt="Responsive image">
+                        <div class="p4 quadrado" onclick="mudaNome('GRANDE OGU'), mudaFoto('./img/gifs/BossG.gif')">
+                            <img src="./img/perC/BossC.png" class="img-fluid img2" alt="Responsive image">
                         </div>
 
                         <div class="p5 quadrado"
-                            onclick="mudaNome('Poção das Cores'), mudaFoto('./img/perC/pocaoC.png')">
+                            onclick="mudaNome('Poção das Cores'), mudaFoto('./img/gifs/pocaoG.gif')">
                             <img src="./img/perC/pocaoC.png" class="img-fluid img2" alt="Responsive image Poção das Cores">
                         </div>
 
                         <div class="p6 quadrado"
-                            onclick="mudaNome('Óculos do Futuro'), mudaFoto('./img/perC/oculosC.png')">
+                            onclick="mudaNome('Óculos do Futuro'), mudaFoto('./img/gifs/oculosG.gif')">
                             <img src="./img/perC/oculosC.png" class="img-fluid img2" alt="Responsive image Óculos do Futuro">
                         </div>
 
                         <div class="p7 quadrado"
-                            onclick="mudaNome('Cronometro Dourado'), mudaFoto('./img/perC/relogioC.png')">
+                            onclick="mudaNome('Cronometro Dourado'), mudaFoto('./img/gifs/cronoG.gif')">
                             <img src="./img/perC/relogioC.png" class="img-fluid img2" alt="Responsive image Cronometro Dourado">
                         </div>
 
                         <div class="p8 quadrado"
-                            onclick="mudaNome('Chapeu do Conhecimento'), mudaFoto('./img/perC/chapeuC.png')">
+                            onclick="mudaNome('Chapeu do Conhecimento'), mudaFoto('./img/gifs/chapeuG.gif')">
                             <img src="./img/perC/chapeuC.png" class="img-fluid img2" alt="Responsive image Chapeu da Sabedoria">
                         </div>
 
@@ -85,8 +85,8 @@
 
         <div class="a2">
             <div class="i-grid">
-                <img src="./img/gifs/chefaoG.gif" id="icone" class="img1" alt="Responsive image">
-                <h2 class="nome-personagem" id="name">GRANDE OGU</h2>
+                <img src="./img/gifs/booG.gif" id="icone" class="img1" alt="Responsive image">
+                <h2 class="nome-personagem" id="name">BOO</h2>
             </div>
 
             <object data="./img//fundo1.svg" class="slide-top svg1" type="image/svg+xml"></object>
