So falta os videos

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 
     <div class="main">
-        
+
     <object data="./img/blob (1).svg" class="slide-top svgGiga" type="image/svg+xml"></object>
     <object data="./img/blob2.svg" class="slide-top2 svgGiga" type="image/svg+xml"></object>
 
@@ -265,7 +265,7 @@
         <div class="grid-flutuante">
 
             <div class="spinner" role="status">
-                <span class="sr-only">Loading...</span>
+                <span class="sr-only"></span>
               </div>
 
               <object data="./img//blk.svg" class="svgApple" type="image/svg+xml"></object>
