--- a/index.html
+++ b/index.html
@@ -109,20 +109,20 @@
 
     <div class="main">
 
-    <object data="./img/blob (1).svg" class="slide-top svgGiga" type="image/svg+xml"></object>
-    <object data="./img/blob2.svg" class="slide-top2 svgGiga" type="image/svg+xml"></object>
+    <object data="./img/blob (1).svg" class="slide-top svgGiga dNone" type="image/svg+xml"></object>
+    <object data="./img/blob2.svg" class="slide-top2 svgGiga dNone" type="image/svg+xml"></object>
 
-    <object data="./img/blob (1).svg" class="slide-top svgGiga2" type="image/svg+xml"></object>
-    <object data="./img/blob2.svg" class="slide-top2 svgGiga2" type="image/svg+xml"></object>
+    <object data="./img/blob (1).svg" class="slide-top svgGiga2 dNone" type="image/svg+xml"></object>
+    <object data="./img/blob2.svg" class="slide-top2 svgGiga2 dNone" type="image/svg+xml"></object>
 
-    <object data="./img/blob (1).svg" class="slide-top svgGiga3" type="image/svg+xml"></object>
-    <object data="./img/blob2.svg" class="slide-top2 svgGiga3" type="image/svg+xml"></object>
+    <object data="./img/blob (1).svg" class="slide-top svgGiga3 dNone" type="image/svg+xml"></object>
+    <object data="./img/blob2.svg" class="slide-top2 svgGiga3 dNone" type="image/svg+xml"></object>
 
-    <object data="./img/blob (1).svg" class="slide-top svgGiga4" type="image/svg+xml"></object>
-    <object data="./img/blob2.svg" class="slide-top2 svgGiga4" type="image/svg+xml"></object>
+    <object data="./img/blob (1).svg" class="slide-top svgGiga4 dNone" type="image/svg+xml"></object>
+    <object data="./img/blob2.svg" class="slide-top2 svgGiga4 dNone" type="image/svg+xml"></object>
 
-    <object data="./img/blob (1).svg" class="slide-top svgGiga5" type="image/svg+xml"></object>
-    <object data="./img/blob2.svg" class="slide-top2 svgGiga5" type="image/svg+xml"></object>
+    <object data="./img/blob (1).svg" class="slide-top svgGiga5 dNone" type="image/svg+xml"></object>
+    <object data="./img/blob2.svg" class="slide-top2 svgGiga5 dNone" type="image/svg+xml"></object>
 
 
 
