--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
 
                         <div class="p8 quadrado"
-                            onclick="mudaNome('Chapeu do Conhecimento'), mudaFoto('./img/gifs/chapeuG.gif')">
+                            onclick="mudaNome('Chapéu do Conhecimento'), mudaFoto('./img/gifs/chapeuG.gif')">
                             <img src="./img/perC/chapeuC.png" class="img-fluid img2" alt="Responsive image Chapeu da Sabedoria">
                         </div>
 
@@ -190,10 +190,10 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="./privacidade.html">
                         <i class="fas fa-globe-americas icons"></i>
                         <div class="footer-nomes">
-                            putheportal.com
+                            Política de privacidade
                         </div>
                     </a>
                 </div>
@@ -257,6 +257,7 @@
             
         </div>
     </footer>
+
 
 
     <div class="menu-flutuante">
