--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <h1>PUT THE PORTALS</h1>
             <div class="grid-a1">
                 <div class="desc">
-                    <h2>Introdução</h2>
-                    <p>Put The Portals é um game indie, que se passa em uma floresta mágica, onde o jogador deverá resolver quebra-cabeças para derrotar seus inimigos. Foi desenvolvido dentro da Apple Academy, uma iniciativa Apple para fomentar o cenário de desenvolvimento de jogos e apps no Brasil, em parceria com a Universidade Católica de  Brasília.</p>
+                    <h2>Introduction</h2>
+                    <p>Put the Portals is an indie game, set in a magical forest, where the player must solve   puzzles using portals to defeat his enemies. The game was developed within the Apple Developer Academy program in partnership with the Universidade Católica de Brasília in Brazil.</p>
                 </div>
 
 
@@ -52,27 +52,27 @@
                             <img src="./img/perC/inimigoC.png" class="img-fluid img2" alt="Responsive image Ogu">
                         </div>
 
-                        <div class="p4 quadrado" onclick="mudaNome('GRANDE OGU'), mudaFoto('./img/gifs/BossG.gif')">
+                        <div class="p4 quadrado" onclick="mudaNome('KING OGU'), mudaFoto('./img/gifs/BossG.gif')">
                             <img src="./img/perC/BossC.png" class="img-fluid img2" alt="Responsive image">
                         </div>
 
                         <div class="p5 quadrado"
-                            onclick="mudaNome('Poção das Cores'), mudaFoto('./img/gifs/pocaoG.gif')">
+                            onclick="mudaNome('Colors Potion'), mudaFoto('./img/gifs/pocaoG.gif')">
                             <img src="./img/perC/pocaoC.png" class="img-fluid img2" alt="Responsive image Poção das Cores">
                         </div>
 
                         <div class="p6 quadrado"
-                            onclick="mudaNome('Óculos do Futuro'), mudaFoto('./img/gifs/oculosG.gif')">
+                            onclick="mudaNome('Future Glasses'), mudaFoto('./img/gifs/oculosG.gif')">
                             <img src="./img/perC/oculosC.png" class="img-fluid img2" alt="Responsive image Óculos do Futuro">
                         </div>
 
                         <div class="p7 quadrado"
-                            onclick="mudaNome('Cronometro Dourado'), mudaFoto('./img/gifs/cronoG.gif')">
+                            onclick="mudaNome('Golden Stopwatch'), mudaFoto('./img/gifs/cronoG.gif')">
                             <img src="./img/perC/relogioC.png" class="img-fluid img2" alt="Responsive image Cronometro Dourado">
                         </div>
 
                         <div class="p8 quadrado"
-                            onclick="mudaNome('Chapéu do Conhecimento'), mudaFoto('./img/gifs/chapeuG.gif')">
+                            onclick="mudaNome('Wisdom Hat'), mudaFoto('./img/gifs/chapeuG.gif')">
                             <img src="./img/perC/chapeuC.png" class="img-fluid img2" alt="Responsive image Chapeu da Sabedoria">
                         </div>
 
@@ -86,7 +86,7 @@
         <div class="a2">
             <div class="i-grid">
                 <img src="./img/gifs/booG.gif" id="icone" class="img1" alt="Responsive image">
-                <h2 class="nome-personagem" id="name">BOO</h2>
+                <h2 class="nome-personagem" id="name">Boo</h2>
             </div>
 
             <object data="./img//fundo1.svg" class="slide-top svg1" type="image/svg+xml"></object>
@@ -129,23 +129,23 @@
             <div class="grid-sobre">
                 <div class="grid-teste">
                     <div class="b1 tx">
-                        <h2>Descrição</h2>
-                        <p>O Jogador usará portais para se locomover, com isso terá que atingir todos os inimigos do mapa, para então conseguir sua vitória, ele também contará com uma série de itens especiais que o ajudarão nessa jornada, como o chapéu da sabedoria e o cronometro dourado.  </p>
+                        <h2>Description</h2>
+                        <p>  
+                            Put the portals for you to move around the map, destroying all enemies and achieving your victory. Remember the primary rule of portal creators, never put a portal without its pier.
+                        </p>
                     </div>
 
                     <div class="b2">
-                        <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008"
-                            src="./videos/screenshotting-008.mp4" style=""></video>
+                            <img src="./videos/ScreenshotMac0001.png" class="img-fluid foto" alt="">
                     </div>
                 </div>
                 <div class="grid-teste2">
                     <div class="b3 tx">
-                        <h2 class="main-h2">Itens especiais</h2>
-                        <p>O jogador certamente enfrentará desafios complexos, nesses momentos ele poderá usar itens especiais, que podem mostrar o caminho inicial do desafio, traçar suas rotas em meio aos portais e até mesmo parar o tempo para que o jogador consiga resolver o desafio sem se preocupar com o relógio.</p>
+                        <h2 class="main-h2">Special items</h2>
+                        <p>You will certainly face complex challenges, in these moments use the special items, which can show the initial path of the challenge, trace your routes through the portals or even stop the time so that you can solve the challenge without worrying about duration.</p>
                     </div>
                     <div class="b4">
-                        <video playsinline="0" autoplay="autoplay" muted="" loop="1" id="screenshotting-008"
-                            src="./videos/screenshotting-008.mp4" style=""></video>
+                        <img src="./videos/ScreenshotMac0002.png" class="img-fluid foto" alt="">
                     </div>
                 </div>
 
@@ -156,8 +156,7 @@
 
 
                     <div class="videp-teaser">
-                        <video class="videp-teaserT" playsinline="0" autoplay="autoplay" muted="" loop="1"
-                            id="screenshotting-008" src="./videos/screenshotting-008.mp4" style=""></video>
+                            <iframe class="teaserr" width="560" height="315" src="https://www.youtube-nocookie.com/embed/jo1W3O-m-hM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
 
 
@@ -190,7 +189,7 @@
                         </div>
                     </a>
 
-                    <a href="./privacidade.html">
+                    <a href="./terms&privacy.html">
                         <i class="fas fa-globe-americas icons"></i>
                         <div class="footer-nomes">
                             Política de privacidade
@@ -259,19 +258,16 @@
     </footer>
 
 
-
+    <a href="https://testflight.apple.com/join/luVMUXwv">
     <div class="menu-flutuante">
         <div class="grid-flutuante">
+            <img src="./img/icone.png" class="icone" alt="Responsive image Óculos do Futuro">
 
-            <div class="spinner" role="status">
-                <span class="sr-only"></span>
-              </div>
-
-              <object data="./img//blk.svg" class="svgApple" type="image/svg+xml"></object>
+            <object data="./img//blk.svg" class="svgApple" type="image/svg+xml"></object>    
         </div>
 
     </div>
-
+    </a>
 
 </body>
 
