--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
                         </div>
                     </a>
 
-                    <a href="#">
-                        <i class="fab fa-app-store icons"></i>
+                    <a href="https://www.instagram.com/puttheportals/">
+                        <i class="fab fa-instagram icons"></i>
                         <div class="footer-nomes">
-                            AppStore/puttheportals
+                            @puttheportals
                         </div>
                     </a>
 
@@ -230,10 +230,10 @@
             <div class="dev">
                 <h2 class="footer-h2">Game Developer</h2>
                 <div class="grid-web ">
-                    <a href="mailto:lukc@rocketmail.com ">
+                    <a href="mailto:lucassiqueira.ap@gmail.com">
                         <i class="far fa-envelope icons"></i>
                         <div class="footer-nomes">
-                            lukc@rocketmail.com 
+                            lucassiqueira.ap@gmail.com
                         </div>
                     </a>
 
@@ -258,16 +258,17 @@
     </footer>
 
 
-    <a href="https://testflight.apple.com/join/luVMUXwv">
+
     <div class="menu-flutuante">
         <div class="grid-flutuante">
             <img src="./img/icone.png" class="icone" alt="Responsive image Óculos do Futuro">
 
-            <object data="./img//blk.svg" class="svgApple" type="image/svg+xml"></object>    
+            <a href="https://testflight.apple.com/join/luVMUXwv">
+                <img src="./img/appstore2.png" class="svgApple" alt="">
+            </a>    
         </div>
-
     </div>
-    </a>
+
 
 </body>
 
