--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="b1 tx">
                         <h2>Description</h2>
                         <p>  
-                            Put the portals for you to move around the map, destroying all enemies and achieving your victory. Remember the primary rule of portal creators, never put a portal without its pier.
+                            Put the portals for you to move around the map, destroying all enemies and achieving your victory. Remember the primary rule of portal creators, never put a portal without its par.
                         </p>
                     </div>
 
